--- a/docs/docs/quickstart.mdx
+++ b/docs/docs/quickstart.mdx
@@ -31,6 +31,9 @@ $ git clone https://github.com/apache/superset
 # Enter the repository you just cloned
 $ cd superset
 
+# create one empty file
+touch docker/.env-local
+
 # Fire up Superset using docker-compose
 $ docker-compose -f docker-compose-image-tag.yml up
 ```
